--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
       "settings": {
         "terminal.integrated.shell.linux": "/bin/zsh",
         "editor.formatOnSave": true,
+        "editor.formatOnType": true,
         "editor.codeActionsOnSave": {
           "source.fixAll.eslint": true
         },
@@ -13,7 +14,18 @@
         "git.autofetch": true,
         "git.postCommitCommand": "push",
         "git.confirmSync": false,
-        "git.autoStash": true
+        "git.autoStash": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "[javascript]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[typescript]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[json]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "files.autoSave": "onFocusChange"
       },
       "extensions": [
         "dbaeumer.vscode-eslint",
