--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "firebase": "^9.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
