Basic auth working in emulators

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,4 @@
-# Firebase Configuration 
-# First, set up your firebase project and app in the firebase console, then:
-# copy this to .env
-# get these values from the firebase console .. 
-#   project overview > settings gear > project settings > your apps 
-
+# Replace these with the values from your Firebase project's console (settings) 
 FIREBASE_API_KEY=your_api_key_here
 FIREBASE_AUTH_DOMAIN=your_auth_domain_here
 FIREBASE_DATABASE_URL=your_database_url_here
@@ -11,3 +6,12 @@ FIREBASE_PROJECT_ID=your_project_id_here
 FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
 FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 FIREBASE_APP_ID=your_app_id_here
+
+# Leave these as-is
+VITE_FIREBASE_API_KEY=$FIREBASE_API_KEY
+VITE_FIREBASE_AUTH_DOMAIN=$FIREBASE_AUTH_DOMAIN
+VITE_FIREBASE_DATABASE_URL=$FIREBASE_DATABASE_URL
+VITE_FIREBASE_PROJECT_ID=$FIREBASE_PROJECT_ID
+VITE_FIREBASE_STORAGE_BUCKET=$FIREBASE_STORAGE_BUCKET
+VITE_FIREBASE_MESSAGING_SENDER_ID=$FIREBASE_MESSAGING_SENDER_ID
+VITE_FIREBASE_APP_ID=$FIREBASE_APP_ID
