--- a/firebase.json
+++ b/firebase.json
@@ -26,6 +26,10 @@
       "enabled": true,
       "port": 4000,
       "host": "0.0.0.0"
+    },
+    "logging": {
+      "port": 4500,
+      "host": "0.0.0.0"
     }
   }
 }
