--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -7,7 +7,8 @@
     "local": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "cross-env DOTENV_CONFIG_PATH=../.env dotenv -e ../.env -- sh -c 'firebase deploy --only hosting --project $FIREBASE_PROJECT_ID'"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
