basic firestore load working with local emulator and deployed

--- a/firebase.json
+++ b/firebase.json
@@ -30,6 +30,10 @@
     "logging": {
       "port": 4500,
       "host": "0.0.0.0"
+    },
+    "hosting": {
+      "port": 8081,
+      "host": "0.0.0.0"
     }
   }
 }
