--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Personal spend tracking app",
   "scripts": {
-    "local": "cross-env VITE_LOCAL_DEV=true dotenv -e .env -- sh -c 'concurrently \"cd react-frontend && npm run local\" \"firebase emulators:start --project $FIREBASE_PROJECT_ID\"'",
+    "local": "cross-env VITE_LOCAL_DEV=true dotenv -e .env -- sh -c 'concurrently \"cd frontend && npm run local\" \"firebase emulators:start --project $FIREBASE_PROJECT_ID\"'",
     "deploy": "firebase deploy",
     "lint": "eslint . --ext .js,.jsx"
   },
